--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('images/optimized_background.jpg');
+  background-image: url('optimized_background.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
